--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,15 @@ button {
 }
 
 .operation {
-    background-color: lightgray;
+    background-color: rgb(222, 222, 222);
+}
+
+#Deg {
+    color: black;
+}
+
+#Rad {
+    color: grey;
 }
 
 #equal {
